--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@types/nodemailer": "^6.4.16",
     "class-variance-authority": "^0.7.0",
