--- a/DockerFile.server
+++ b/DockerFile.server
@@ -2,23 +2,26 @@
 FROM node:latest
 
 # Crea una directory di lavoro
-WORKDIR /CorsoCyber-AutoShop/server
+WORKDIR /CorsoCyber-AutoShop
 
 # Copia i file package.json e package-lock.json
-COPY package*.json ./
-
-# Installa le dipendenze
-#RUN npm install mysql2
-
+COPY ./server/package*.json ./
 
 # Installa le dipendenze
 RUN npm install
 
+# Installa TypeScript globalmente
+RUN npm install -g typescript
+
 # Copia il codice sorgente
-COPY /server ./
+COPY ./server ./
+
+# Compila TypeScript (assicurati che ci sia un file tsconfig.json configurato)
+RUN tsc
 
 # Espone la porta del server
 EXPOSE 5000
 
 # Comando per avviare l'app
 CMD ["npm", "start"]
+#CMD ["node", "./dist/server/src/index.js"]
