--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,8 +46,8 @@ services:
     #  - DB_USER=${DB_USER:-myuser} 
     #  - DB_USER_PASSWORD=${DB_USER_PASSWORD:-changeme} 
     #  - DB_NAME=${DB_NAME:-myappdb}
-    env_file:
-      - .env
+    #env_file:
+    #  - .env
     networks:
       - corso-network
     depends_on:
@@ -60,8 +60,8 @@ services:
     environment:
       #- MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD:-changeme} 
       #- MYSQL_DATABASE=${DB_NAME:-myappdb}           
-      - MYSQL_ROOT_PASSWORD: 22dj78dj
-      - MYSQL_DATABASE: pippo           
+      - MYSQL_ROOT_PASSWORD=22dj78dj
+      - MYSQL_DATABASE=pippo           
     ports:
       - "3306:3306"
     networks:
