--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,19 +2,19 @@
 
 server {
     listen 80; # default_server;
-    listen 443;
+    #listen 443;
     #listen [::]:80 default_server;
 
     #server_name 192.168.1.77;
     #server_name _;
 
-    server_name corso-security.duckdns.org;
+    #server_name corso-security.duckdns.org;
 
-    root /test_deploy1/client/.next;
+    #root /test_deploy1/client/.next;
     #index index.html;
 
     location / {
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://client:3000;
         proxy_buffer_size 128k;
         proxy_buffers 4 256k;
         proxy_busy_buffers_size 256k;
@@ -32,7 +32,7 @@ server {
     }
 
     location /_next/static/ {
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://client:3000;
 	    proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -41,7 +41,7 @@ server {
     }
 
     location ~ \.(svg|png|jpg|jpeg|gif|ico|webp)$ {
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://client:3000;
 	    proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -50,8 +50,8 @@ server {
     }
 
 
-    location /api {
-	proxy_pass http://127.0.0.1:5000/;
+    location /api/ {
+	proxy_pass http://server:5000/;
     	proxy_http_version 1.1;
     	proxy_set_header Upgrade $http_upgrade;
     	proxy_set_header Connection 'upgrade';
