--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     networks:
       - corso-network
     depends_on:
+      - nginx
       - server
       - mysql
 
@@ -28,8 +29,7 @@ services:
     networks:
       - corso-network
     restart: always
-    depends_on:
-      - client   
+    depends_on:  
       - server
 
   # Servizio per il server (Node.js/Express)
