--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,7 +5,7 @@ server {
     #listen 443;
     #listen [::]:80 default_server;
 
-    #server_name 192.168.1.77;
+    server_name 192.168.1.121;
     #server_name _;
 
     #server_name corso-security.duckdns.org;
@@ -51,7 +51,7 @@ server {
 
 
     location /api/ {
-	proxy_pass http://server:5000/;
+	    proxy_pass http://server:5000/;
     	proxy_http_version 1.1;
     	proxy_set_header Upgrade $http_upgrade;
     	proxy_set_header Connection 'upgrade';
