--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
 # Ignora l'intero file .env per il progetto
 .env
 .env*
+.env.*
+._env*
 
 # Node.js (Server)
 server/node_modules/
 server/.env
+server/.env.*
 server/.env*
+server/._env*
+server/._env.*
 server/.npm/
 server/logs/
 server/temp/
@@ -21,6 +26,9 @@ client/.next/
 client/node_modules/
 client/.env.local
 client/.env*
+client/.env.*
+client/._env*
+client/._env.*
 client/._env.local
 client/.env.development.local
 client/.env.test.local
