--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,7 @@
 
 
+
+
 server {
     listen 80; # default_server;
     #listen 443;
@@ -15,51 +17,56 @@ server {
 
     location / {
         proxy_pass http://client:3000;
-        proxy_buffer_size 128k;
-        proxy_buffers 4 256k;
-        proxy_busy_buffers_size 256k;
-	    proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        #proxy_cache_bypass $http_upgrade;
-        proxy_read_timeout 600s;
-
-        proxy_redirect off;
+        proxy_http_version 1.1;
+        proxy_set_header Host $http_host; # Include la porta, se specificata
+        proxy_set_header X-Forwarded-Host $http_host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_cache_bypass $http_upgrade;
-
-    	#try_files $uri $uri/ /_next/static/chunks/pages/$uri /index.html; #per delegare il routing a next
+        proxy_set_header Connection $http_connection;
     }
 
     location /_next/static/ {
         proxy_pass http://client:3000;
-	    proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
+        proxy_http_version 1.1;
+        proxy_set_header Host $http_host; # Include la porta, se specificata
+        proxy_set_header X-Forwarded-Host $http_host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_cache_bypass $http_upgrade;
+        proxy_set_header Connection $http_connection;
     }
 
     location ~ \.(svg|png|jpg|jpeg|gif|ico|webp)$ {
         proxy_pass http://client:3000;
-	    proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;    
+        proxy_http_version 1.1;
+        proxy_set_header Host $http_host; # Include la porta, se specificata
+        proxy_set_header X-Forwarded-Host $http_host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header Connection $http_connection;
     }
 
 
     location /api/ {
-	    proxy_pass http://server:5000/;
-    	proxy_http_version 1.1;
-    	proxy_set_header Upgrade $http_upgrade;
-    	proxy_set_header Connection 'upgrade';
-    	proxy_set_header Host $host;
-    	proxy_cache_bypass $http_upgrade;
+        proxy_pass http://server:5000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Host $http_host;
+       # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-For $remote_addr;  # L'indirizzo IP del client
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header Origin $http_origin;
     }
 
 
-   
-}
 
+}
