--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -27,6 +27,20 @@ server {
         proxy_set_header Connection $http_connection;
     }
 
+    location /uploads/ {
+        proxy_pass http://server:5000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Host $http_host;
+        proxy_set_header X-Forwarded-For $remote_addr;  # L'indirizzo IP del client
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header Origin $http_origin;
+    }
+
     location /_next/static/ {
         proxy_pass http://client:3000;
         proxy_http_version 1.1;
@@ -39,17 +53,17 @@ server {
         proxy_set_header Connection $http_connection;
     }
 
-    location ~ \.(svg|png|jpg|jpeg|gif|ico|webp)$ {
-        proxy_pass http://client:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Host $http_host; # Include la porta, se specificata
-        proxy_set_header X-Forwarded-Host $http_host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_cache_bypass $http_upgrade;
-        proxy_set_header Connection $http_connection;
-    }
+    #location ~ \.(svg|png|jpg|jpeg|gif|ico|webp)$ {
+    #    proxy_pass http://client:3000;
+    #    proxy_http_version 1.1;
+    #    proxy_set_header Host $http_host; # Include la porta, se specificata
+    #    proxy_set_header X-Forwarded-Host $http_host;
+    #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #    proxy_set_header X-Forwarded-Proto $scheme;
+    #    proxy_set_header X-Real-IP $remote_addr;
+    #    proxy_cache_bypass $http_upgrade;
+    #    proxy_set_header Connection $http_connection;
+    #}
 
 
     location /api/ {
@@ -66,6 +80,9 @@ server {
         proxy_cache_bypass $http_upgrade;
         proxy_set_header Origin $http_origin;
     }
+
+   
+    
 
 
 
