--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -27,6 +27,18 @@ server {
         proxy_set_header Connection $http_connection;
     }
 
+    location /api/ {
+        proxy_pass http://client:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $http_host; # Include la porta, se specificata
+        proxy_set_header X-Forwarded-Host $http_host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header Connection $http_connection;
+    }
+
     location /uploads/ {
         proxy_pass http://server:5000;
         proxy_http_version 1.1;
@@ -66,7 +78,7 @@ server {
     #}
 
 
-    location /api/ {
+    location /v1/ {
         proxy_pass http://server:5000;
         proxy_http_version 1.1;
         proxy_set_header Host $http_host;
