bigFix docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,5 @@
-
-
-#version: '3.8'
-
+---
+# version: '3.8'
 services:
   # Servizio per il client (Next.js)
   client:
@@ -17,7 +15,6 @@ services:
       - nginx
       - server
       - mysql
-
   # Servizio per Nginx
   nginx:
     image: nginx:latest
@@ -31,35 +28,33 @@ services:
     restart: always
     depends_on:  
       - server
-
   # Servizio per il server (Node.js/Express)
   server:
     build:
       context: .   
-      dockerfile: DockerFile.server  # Usa il Dockerfile del server
+      dockerfile: Dockerfile.server  # Usa il Dockerfile del server
     container_name: server-container
     ports:
       - "5000:5000"
     restart: always
-    #environment:
+    # environment:
     #  - DB_HOST=${DB_HOST:-mysql}
-    #  - DB_USER=${DB_USER:-myuser} 
-    #  - DB_USER_PASSWORD=${DB_USER_PASSWORD:-changeme} 
+    #  - DB_USER=${DB_USER:-myuser}
+    #  - DB_USER_PASSWORD=${DB_USER_PASSWORD:-changeme}
     #  - DB_NAME=${DB_NAME:-myappdb}
-    #env_file:
+    # env_file:
     #  - .env
     networks:
       - corso-network
     depends_on:
       - mysql
-
   # Servizio per MySQL
   mysql:
     image: mysql:8.0
     container_name: mysql-container
     environment:
-      #- MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD:-changeme} 
-      #- MYSQL_DATABASE=${DB_NAME:-myappdb}           
+      # - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD:-changeme}
+      # - MYSQL_DATABASE=${DB_NAME:-myappdb}
       - MYSQL_ROOT_PASSWORD=22dj78dj
       - MYSQL_DATABASE=pippo           
     ports:
@@ -69,15 +64,8 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
     restart: always
-
 networks:
   corso-network:
     driver: bridge
-
 volumes:
   mysql_data:
-
-  
-       
-
-
