--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,4 +1,5 @@
 
+ 
 
 
 
@@ -8,6 +9,12 @@ server {
     #listen [::]:80 default_server;
 
     server_name 192.168.1.121;
+
+    server_tokens off;
+    proxy_hide_header X-Powered-By;
+    proxy_hide_header Server;
+    add_header X-Powered-By "";  #sovrascrive con header vuoto
+    
     #server_name _;
 
     #server_name corso-security.duckdns.org;
@@ -25,6 +32,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_cache_bypass $http_upgrade;
         proxy_set_header Connection $http_connection;
+        proxy_hide_header X-Powered-By;
+        proxy_hide_header Server;
     }
 
     location /api/ {
@@ -37,6 +46,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_cache_bypass $http_upgrade;
         proxy_set_header Connection $http_connection;
+        proxy_hide_header X-Powered-By;
+        proxy_hide_header Server;
     }
 
     location /uploads/ {
@@ -51,6 +62,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_cache_bypass $http_upgrade;
         proxy_set_header Origin $http_origin;
+        proxy_hide_header X-Powered-By;
+        proxy_hide_header Server;
     }
 
     location /_next/static/ {
@@ -63,6 +76,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_cache_bypass $http_upgrade;
         proxy_set_header Connection $http_connection;
+        proxy_hide_header X-Powered-By;
+        proxy_hide_header Server;
     }
 
     #location ~ \.(svg|png|jpg|jpeg|gif|ico|webp)$ {
@@ -83,7 +98,7 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-Host $http_host;
-       # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-For $remote_addr;  # L'indirizzo IP del client
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Upgrade $http_upgrade;
@@ -91,11 +106,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_cache_bypass $http_upgrade;
         proxy_set_header Origin $http_origin;
+        proxy_hide_header X-Powered-By;
+        proxy_hide_header Server;
     }
-
-   
-    
-
-
 
 }
