--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,6 +12,8 @@ server {
     proxy_hide_header X-Powered-By;
     proxy_hide_header Server;
     add_header X-Powered-By "";  #sovrascrive con header vuoto    
+
+    client_max_body_size 10M;
     
     location / {
         proxy_pass http://client:3000;
@@ -27,20 +29,20 @@ server {
         proxy_hide_header Server;
     }
 
-    location /private/profilo {
-        client_max_body_size 10M;           
-        proxy_pass http://client:3000;      
-        proxy_http_version 1.1;
-        proxy_set_header Host $http_host;   
-        proxy_set_header X-Forwarded-Host $http_host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_cache_bypass $http_upgrade;
-        proxy_set_header Connection $http_connection;
-        proxy_hide_header X-Powered-By;
-        proxy_hide_header Server;
-    }
+    #location /private/profilo {
+    #    #client_max_body_size 10M;           
+    #    proxy_pass http://client:3000;      
+    #    proxy_http_version 1.1;
+    #    proxy_set_header Host $http_host;   
+    #    proxy_set_header X-Forwarded-Host $http_host;
+    #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #    proxy_set_header X-Forwarded-Proto $scheme;
+    #    proxy_set_header X-Real-IP $remote_addr;
+    #    proxy_cache_bypass $http_upgrade;
+    #    proxy_set_header Connection $http_connection;
+    #    proxy_hide_header X-Powered-By;
+    #    proxy_hide_header Server;
+    #}
     #location /api/ {
     #    proxy_pass http://client:3000;
     #    proxy_http_version 1.1;
