cleaning Nginx conf

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,7 +4,7 @@
 
 
 server {
-    listen 80; # default_server;
+    listen 80;  
     
     server_name 192.168.1.121;
 
@@ -27,35 +27,7 @@ server {
         proxy_set_header Connection $http_connection;
         proxy_hide_header X-Powered-By;
         proxy_hide_header Server;
-    }
-
-    #location /private/profilo {
-    #    #client_max_body_size 10M;           
-    #    proxy_pass http://client:3000;      
-    #    proxy_http_version 1.1;
-    #    proxy_set_header Host $http_host;   
-    #    proxy_set_header X-Forwarded-Host $http_host;
-    #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #    proxy_set_header X-Forwarded-Proto $scheme;
-    #    proxy_set_header X-Real-IP $remote_addr;
-    #    proxy_cache_bypass $http_upgrade;
-    #    proxy_set_header Connection $http_connection;
-    #    proxy_hide_header X-Powered-By;
-    #    proxy_hide_header Server;
-    #}
-    #location /api/ {
-    #    proxy_pass http://client:3000;
-    #    proxy_http_version 1.1;
-    #    proxy_set_header Host $http_host; # Include la porta, se specificata
-    #    proxy_set_header X-Forwarded-Host $http_host;
-    #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #    proxy_set_header X-Forwarded-Proto $scheme;
-    #    proxy_set_header X-Real-IP $remote_addr;
-    #    proxy_cache_bypass $http_upgrade;
-    #    proxy_set_header Connection $http_connection;
-    #    proxy_hide_header X-Powered-By;
-    #    proxy_hide_header Server;
-    #}
+    }    
 
     location /uploads/ {
         proxy_pass http://server:5000;
@@ -86,20 +58,7 @@ server {
         proxy_hide_header X-Powered-By;
         proxy_hide_header Server;
     }
-
-    #location ~ \.(svg|png|jpg|jpeg|gif|ico|webp)$ {
-    #    proxy_pass http://client:3000;
-    #    proxy_http_version 1.1;
-    #    proxy_set_header Host $http_host; # Include la porta, se specificata
-    #    proxy_set_header X-Forwarded-Host $http_host;
-    #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #    proxy_set_header X-Forwarded-Proto $scheme;
-    #    proxy_set_header X-Real-IP $remote_addr;
-    #    proxy_cache_bypass $http_upgrade;
-    #    proxy_set_header Connection $http_connection;
-    #}
-
-
+    
     location /v1/ {
         proxy_pass http://server:5000;
         proxy_http_version 1.1;
