--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,18 +18,17 @@ services:
       - server
       - mysql
   # Servizio per Nginx
-  nginx:
-    image: nginx:latest
-    container_name: nginx-container
+  nginx-proxy-manager:
+    image: 'jc21/nginx-proxy-manager:latest'
+    container_name: ngpm-container
     ports:
       - "80:80"
+      - "81:81"
+      - "443:443"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf      
-    networks:
-      - corso-network
-    restart: always
-    depends_on:  
-      - server
+      - ./nginx_data:/data
+      - ./letsencrypt:/etc/letsencrypt          
+    restart: always    
   # Servizio per il server (Node.js/Express)
   server:
     build:
