--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,47 +6,40 @@ services:
     build:
       context: .   
       dockerfile: Dockerfile  # Usa il Dockerfile per Next.js
-    container_name: client-container
-    # ports:
-    #  - "3000:3000"
+    container_name: client-container   
     expose:
       - "3000"
     networks:
       - corso-network
     depends_on:
-    #  - nginx
+      - nginx
       - server
       - mysql
   # Servizio per Nginx
-  nginx-proxy-manager:
-    image: 'jc21/nginx-proxy-manager:latest'
-    container_name: ngpm-container
+  nginx:
+    image: nginx:latest
+    container_name: nginx-container
     ports:
       - "80:80"
       - "81:81"
       - "443:443"
     volumes:
-      - ./nginx_data:/data
-      - ./letsencrypt:/etc/letsencrypt          
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+    networks:
+      - corso-network        
     restart: always    
+    depends_on:
+      - server
   # Servizio per il server (Node.js/Express)
   server:
     build:
       context: .   
       dockerfile: DockerFile.server  # Usa il Dockerfile del server
     container_name: server-container
-    # ports:
-    #  - "5000:5000"
     expose:
       - "5000"
-    restart: always
-    # environment:
-    #  - DB_HOST=${DB_HOST:-mysql}
-    #  - DB_USER=${DB_USER:-myuser}
-    #  - DB_USER_PASSWORD=${DB_USER_PASSWORD:-changeme}
-    #  - DB_NAME=${DB_NAME:-myappdb}
-    # env_file:
-    #  - .env
+    restart: always    
     networks:
       - corso-network
     depends_on:
@@ -55,13 +48,9 @@ services:
   mysql:
     image: mysql:8.0
     container_name: mysql-container
-    environment:
-      # - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD:-changeme}
-      # - MYSQL_DATABASE=${DB_NAME:-myappdb}
+    environment:      
       - MYSQL_ROOT_PASSWORD=22dj78dj
-      - MYSQL_DATABASE=pippo           
-    # ports:
-    #  - "3306:3306"
+      - MYSQL_DATABASE=pippo 
     expose:
       - "3306"
     networks:
