--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,12 +1,28 @@
 
  
-
+# Reindirizzamento HTTP a HTTPS
+server {
+    listen 80;
+    server_name corso-security.duckdns.org;
+    return 301 https://$server_name$request_uri;
+}
 
 
 server {
-    listen 80;  
+    listen 443 ssl http2;  
+    http2 on;  
     
-    server_name 192.168.1.121;
+    server_name corso-security.duckdns.org;
+
+    # Certificati SSL Let's Encrypt
+    ssl_certificate /etc/letsencrypt/live/corso-security.duckdns.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/corso-security.duckdns.org/privkey.pem;
+
+    # Impostazioni SSL avanzate
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    # ssl_ciphers EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH;
+    # ssl_ecdh_curve secp384r1;
 
     server_tokens off;
     proxy_hide_header X-Powered-By;
