add Content-Security-Policy to Nginx conf

--- a/nginx/default copy 2.conf
+++ b/nginx/default copy 2.conf
@@ -18,7 +18,12 @@ server {
     # Configurazione avanzata SSL per maggiore sicurezza
     ssl_protocols TLSv1.2 TLSv1.3; # Permette solo protocolli sicuri
     ssl_prefer_server_ciphers on; # Usa la suite di cifratura preferita dal server
-   
+    ssl_session_timeout 1d; # Timeout della sessione SSL di 1 giorno
+    ssl_session_cache shared:SSL:50m; # Memorizza le sessioni SSL per migliorare le prestazioni
+    ssl_session_tickets off; # Disabilita i session tickets per migliorare la sicurezza
+    ssl_stapling on; # Abilita OCSP stapling per ridurre i tempi di verifica del certificato
+    ssl_stapling_verify on; # Verifica le risposte OCSP per garantire autenticità
+
     # Nasconde informazioni sul server per sicurezza
     server_tokens off; # Nasconde la versione di Nginx nelle risposte HTTP
     proxy_hide_header X-Powered-By; # Nasconde l'header X-Powered-By
@@ -33,19 +38,17 @@ server {
     add_header Referrer-Policy "no-referrer" always; # Non invia il referrer
     add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always; # Blocca accesso a geo/microfono/fotocamera
 
+    # Content Security Policy (CSP) per limitare le origini consentite
     add_header Content-Security-Policy "
         default-src 'self';
-        script-src 'strict-dynamic' 'self' https: https://www.google.com https://www.gstatic.com;
-        style-src 'self' 'unsafe-inline';
-        img-src 'self' data: https: http://server:5000 https://www.google.com;
-        font-src 'self' https:;
-        connect-src 'self' https: https://www.google.com;
-        frame-src 'self' https://www.google.com;
+        script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
+        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+        font-src 'self' https://fonts.gstatic.com;
+        img-src 'self' data:;
         frame-ancestors 'none';
-        base-uri 'self';
         form-action 'self';
-        object-src 'none'
-    ";
+        upgrade-insecure-requests;" always;
+
     # Limita la dimensione massima dei file caricati
     client_max_body_size 10M;
 
@@ -60,6 +63,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;  # Passa l'IP reale del client
         proxy_cache_bypass $http_upgrade;  # Evita caching per richieste WebSocket
         proxy_set_header Connection $http_connection;  # Gestisce connessioni persistenti
+        proxy_hide_header x-nextjs-cache; # nasconde header x-nextjs-cache
         proxy_hide_header X-Powered-By;  # Nasconde informazioni sul backend
         proxy_hide_header Server;  # Nasconde informazioni sul server
     }
