--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -33,19 +33,7 @@ server {
     add_header Referrer-Policy "no-referrer" always; # Non invia il referrer
     add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always; # Blocca accesso a geo/microfono/fotocamera
 
-    add_header Content-Security-Policy "
-        default-src 'self';
-        script-src 'strict-dynamic' 'self' https: https://www.google.com https://www.gstatic.com;
-        style-src 'self' 'unsafe-inline';
-        img-src 'self' data: https: http://server:5000 https://www.google.com;
-        font-src 'self' https:;
-        connect-src 'self' https: https://www.google.com;
-        frame-src 'self' https://www.google.com;
-        frame-ancestors 'none';
-        base-uri 'self';
-        form-action 'self';
-        object-src 'none'
-    ";
+    add_header Content-Security-Policy "default-src 'self'; script-src 'strict-dynamic' 'self' https: https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https: http://server:5000 https://www.google.com; font-src 'self' https:; connect-src 'self' https: https://www.google.com; frame-src 'self' https://www.google.com; frame-ancestors 'none'; base-uri 'self'; form-action 'self'; object-src 'none'";
     # Limita la dimensione massima dei file caricati
     client_max_body_size 10M;
 
