update Nginx conf

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -22,8 +22,9 @@ server {
     # Nasconde informazioni sul server per sicurezza
     server_tokens off; # Nasconde la versione di Nginx nelle risposte HTTP
     proxy_hide_header X-Powered-By; # Nasconde l'header X-Powered-By
-    proxy_hide_header Server;  # Nasconde l'header Server
     add_header X-Powered-By ""; # Sovrascrive l'header con un valore vuoto
+    proxy_hide_header Server;  # Nasconde l'header Server
+    add_header Server "";    
 
     # Security Headers
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always; # Abilita HSTS per 1 anno
@@ -33,29 +34,30 @@ server {
     add_header Referrer-Policy "no-referrer" always; # Non invia il referrer
     add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always; # Blocca accesso a geo/microfono/fotocamera
 
-    add_header Content-Security-Policy "default-src 'self'; script-src 'strict-dynamic' 'self' https: https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https: http://server:5000 https://www.google.com; font-src 'self' https:; connect-src 'self' https: https://www.google.com; frame-src 'self' https://www.google.com; frame-ancestors 'none'; base-uri 'self'; form-action 'self'; object-src 'none'";
+    
+    add_header Content-Security-Policy "default-src 'self'; script-src 'strict-dynamic' 'self' 'unsafe-inline' https: https://www.google.com https://www.gstatic.com; script-src-elem 'self' 'unsafe-inline' https: https://corso-security.duckdns.org https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https: http://server:5000; font-src 'self' https:; connect-src 'self' https: http://server:5000; frame-src 'self' https://www.google.com; frame-ancestors 'none'; base-uri 'self'; form-action 'self'; object-src 'none'";
+
+    
+    
     # Limita la dimensione massima dei file caricati
     client_max_body_size 10M;
 
     # Configurazione del reverse proxy per il frontend (Next.js)
     location / {
         proxy_pass http://client:3000;  # Reindirizza le richieste al client Next.js
-        proxy_http_version 1.1;  # Usa HTTP/1.1 per evitare problemi di connessione
+        # proxy_http_version 1.1;  # Usa HTTP/1.1 per evitare problemi di connessione
         proxy_set_header Host $http_host;  # Mantiene l'host originale
         proxy_set_header X-Forwarded-Host $http_host;  # Forward dell'host originale
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;  # IP originale del client
         proxy_set_header X-Forwarded-Proto $scheme;  # Indica il protocollo originale (HTTP/HTTPS)
         proxy_set_header X-Real-IP $remote_addr;  # Passa l'IP reale del client
         proxy_cache_bypass $http_upgrade;  # Evita caching per richieste WebSocket
-        proxy_set_header Connection $http_connection;  # Gestisce connessioni persistenti
-        proxy_hide_header X-Powered-By;  # Nasconde informazioni sul backend
-        proxy_hide_header Server;  # Nasconde informazioni sul server
+        proxy_set_header Connection $http_connection;  # Gestisce connessioni persistenti        
     }
 
     # Configurazione del reverse proxy per il caricamento delle immagini
     location /uploads/ {
         proxy_pass http://server:5000;
-        proxy_http_version 1.1;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-Host $http_host;
         proxy_set_header X-Forwarded-For $remote_addr;
@@ -65,14 +67,11 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_cache_bypass $http_upgrade;
         proxy_set_header Origin $http_origin;
-        proxy_hide_header X-Powered-By;
-        proxy_hide_header Server;
     }
 
     # Configurazione del reverse proxy per file statici di Next.js
     location /_next/static/ {
         proxy_pass http://client:3000;
-        proxy_http_version 1.1;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-Host $http_host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -80,14 +79,11 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_cache_bypass $http_upgrade;
         proxy_set_header Connection $http_connection;
-        proxy_hide_header X-Powered-By;
-        proxy_hide_header Server;
     }
 
     # Configurazione del reverse proxy per le API backend
     location /v1/ {
         proxy_pass http://server:5000;
-        proxy_http_version 1.1;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-Host $http_host;
         proxy_set_header X-Forwarded-For $remote_addr;
@@ -97,7 +93,5 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_cache_bypass $http_upgrade;
         proxy_set_header Origin $http_origin;
-        proxy_hide_header X-Powered-By;
-        proxy_hide_header Server;
     }
 }
