--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "helmet": "^8.0.0",
     "jose": "^5.9.6",
     "mysql2": "^3.11.5",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
